--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "mocha \"tests/**/*.test.js\""
+    "start": "node app.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
