--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "mocha"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "npx mocha \"test/**/*.test.js\" --exit"
   },
   "repository": {
     "type": "git",
